--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,21 +5,21 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "args": ["--configFolder", "test/config"],
+      "args": ["-c", "test/config/gateway.yaml"],
       "cwd": "${workspaceFolder}",
       "name": "Launch Gateway",
       "type": "go",
       "request": "launch",
       "mode": "debug",
-      "program": "${workspaceFolder}/cmd/gateway/main.go"
+      "program": "${workspaceFolder}/cmd/main.go"
     },
     {
       "name": "Launch logging plugin",
-      "args": ["localhost:9678" ],
+      "args": ["-c", "test/config/gateway.yaml"],
       "type": "go",
       "request": "launch",
       "mode": "debug",
-      "program": "${workspaceFolder}/plugins/logging",
+      "program": "${workspaceFolder}/plugins/logger/cmd/main.go",
     },
 
 
