--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "args": ["-c", "test/config/gateway.yaml"],
+      "args": [],
       "cwd": "${workspaceFolder}",
       "name": "Launch Gateway",
       "type": "go",
@@ -14,12 +14,20 @@
       "program": "${workspaceFolder}/cmd/main.go"
     },
     {
-      "name": "Launch logging plugin",
-      "args": ["-c", "test/config/gateway.yaml"],
+      "name": "Launch smbus plugin",
+      "args": [],
       "type": "go",
       "request": "launch",
       "mode": "debug",
-      "program": "${workspaceFolder}/plugins/logger/cmd/main.go",
+      "program": "${workspaceFolder}/plugins/smbus/main.go",
+    },
+    {
+      "name": "Launch channel logger plugin",
+      "args": [],
+      "type": "go",
+      "request": "launch",
+      "mode": "debug",
+      "program": "${workspaceFolder}/plugins/logger/main.go",
     },
 
 
