--- a/test/config/gateway.yaml
+++ b/test/config/gateway.yaml
@@ -2,16 +2,18 @@
 
 # Message bus server
 messenger:
-  #certsFolder: "${appfolder}/certs" # location of gateway and client certificate
+  #certsFolder: "../certs" # relative to this config file
   protocol: "smbus" # smbus, MQTT, default smbus
   #hostname: "localhost:9678" # hostname:port or ip:port to listen on of message bus
   useTLS: false # use TLS for client/server messaging
 
 # Logging
 logging:
-  # logFile: "/var/log/wost/gateway.log"
+  #logFile: "../logs/gateway.log" # relative to this config file
   logLevel: "info" # debug, info, warning, error. Default is warning
+
+#configFolder: "../config" # plugin config, relative to the working directory
 
 # Plugins to start
 plugins: # list of plugins to start
-  - ls
+  - /bin/ls
