--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,16 +14,9 @@
       "program": "${workspaceFolder}/cmd/main.go"
     },
     {
-      "name": "Launch smbus plugin",
-      "args": ["--home", "../../test"],
-      "type": "go",
-      "request": "launch",
-      "mode": "debug",
-      "program": "${workspaceFolder}/plugins/smbus/main.go",
-    },
-    {
       "name": "Launch channel recorder plugin",
-      "args": ["--home", "../../test", "-hostname", "localhost:9999"],
+      // "args": ["--home", "../../test", "-hostname", "localhost:9999"],
+      "args": ["--home", "../../dist", "-hostname", "localhost:9999"],
       "type": "go",
       "request": "launch",
       "mode": "debug",
