--- a/test/config/gateway-invalid.yaml
+++ b/test/config/gateway-invalid.yaml
@@ -2,8 +2,9 @@
 
 # Message bus server
 messenger:
-  protocol: "badprotocol" # smbus, MQTT, default smbus
-  useTLS: false # use TLS for client/server messaging
+  certsFolder: /invalid/folder # used when useTLS is true
+  protocol: "" # smbus, MQTT, default smbus
+  # useTLS: true # use TLS for client/server messaging
 
 # Logging
 logging:
