--- a/test/config/gateway.yaml
+++ b/test/config/gateway.yaml
@@ -7,6 +7,7 @@ messenger:
   #hostname: "localhost:9678" # hostname:port or ip:port to listen on of message bus
   hostname: "localhost:9999" # do not interfere with production server
   useTLS: true # use TLS for client/server messaging
+  timeout: 1
 
 # Logging
 logging:
