--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,13 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+*.log
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
+dist/certs/*
+dist/bin/*
+dist/arm/*
+dist/logs/*
+*.crt
+*.key
