--- a/test/config/hub.yaml
+++ b/test/config/hub.yaml
@@ -1,4 +1,4 @@
-# Example gateway configuration
+# Example hub configuration
 
 # Message bus server
 messenger:
@@ -11,7 +11,7 @@ messenger:
 
 # Logging
 logging:
-  #logFile: "../logs/gateway.log" # relative to this config file
+  #logFile: "../logs/hub.log" # relative to this config file
   logLevel: "info" # debug, info, warning, error. Default is warning
 
 #configFolder: "../config" # plugin config, relative to the working directory
