--- a/test/config/hub.yaml
+++ b/test/config/hub.yaml
@@ -2,11 +2,10 @@
 
 # Message bus server
 messenger:
-  #certsFolder: "../certs" # relative to this config file
+  #certsFolder: "./certs" # set to activate TLS. Relative to app home folder
   protocol: "smbus" # smbus, MQTT, default smbus
   #hostname: "localhost:9678" # hostname:port or ip:port to listen on of message bus
   hostname: "localhost:9999" # do not interfere with production server
-  useTLS: true # use TLS for client/server messaging
   timeout: 1
 
 # Logging
