dev iteration - refactoring, split hub api's into separate repo

--- a/test/config/hub.yaml
+++ b/test/config/hub.yaml
@@ -2,7 +2,8 @@
 
 # Message bus server
 messenger:
-  #certsFolder: "./certs" # set to activate TLS. Relative to app home folder
+  #certFolder: "./certs" # set to activate TLS. Relative to app home folder
+  certFolder: "/etc/mosquitto/certs" # set to activate TLS. Relative to app home folder
   protocol: "smbus" # smbus, MQTT, default smbus
   #hostname: "localhost:9678" # hostname:port or ip:port to listen on of message bus
   hostname: "localhost:9999" # do not interfere with production server
