--- a/test/config/mosquitto.conf.template
+++ b/test/config/mosquitto.conf.template
@@ -23,7 +23,7 @@ log_type information
 
 # MQTT over TLS/SSL for use with certificate. 
 # This is the preferred connection method and used by devices, plugins, administrator and consumers with a certificate.
-listener {{.certPortMqtt}}
+listener {{.mqttCertPort}}
 cafile {{.homeFolder}}/certs/caCert.pem
 keyfile {{.homeFolder}}/certs/hubKey.pem
 certfile {{.homeFolder}}/certs/hubCert.pem
@@ -43,7 +43,7 @@ auth_plugin {{.homeFolder}}/../dist/bin/mosqauth.so
 # Client certificates are not used but a server CA is needed on the client or the 
 #  client must ignore certificate verification.
 # Use a password file for user names
-listener {{.unpwPortWS}}
+listener {{.mqttUnpwPortWS}}
 protocol websockets
 cafile {{.homeFolder}}/certs/caCert.pem
 keyfile {{.homeFolder}}/certs/hubKey.pem
