--- a/test/config/mosquitto.conf
+++ b/test/config/mosquitto.conf
@@ -25,11 +25,11 @@ log_type information
 
 #--- Default listener for MQTT over TLS with certificate
 # This is the preferred connection method and used by devices, plugins, administrator and consumers with a certificate.
-port {{.mqttCertPort}}
+port 33100
 #max_connections 30
-cafile {{.homeFolder}}/certs/caCert.pem
-keyfile {{.homeFolder}}/certs/hubKey.pem
-certfile {{.homeFolder}}/certs/hubCert.pem
+cafile /home/henk/projects/wost/hub/test/certs/caCert.pem
+keyfile /home/henk/projects/wost/hub/test/certs/hubKey.pem
+certfile /home/henk/projects/wost/hub/test/certs/hubCert.pem
 
 # Certificate CN field is used as the username
 require_certificate true
@@ -37,7 +37,7 @@ use_identity_as_username true
 #	use_subject_as_username
 tls_version tlsv1.2
 # mosqauth plugin handles authorization
-auth_plugin {{.homeFolder}}/../dist/bin/mosqauth.so
+auth_plugin /home/henk/projects/wost/hub/test/../dist/bin/mosqauth.so
 
 
 #--- WebSockets over TLS/SSL for use with login/password
@@ -45,16 +45,16 @@ auth_plugin {{.homeFolder}}/../dist/bin/mosqauth.so
 # Client certificates are not used but a server CA is needed on the client or the 
 #  client must ignore certificate verification.
 # Use a password file for user names
-listener {{.mqttUnpwPortWS}}
+listener 33101
 #max_connections 100
 protocol websockets
-cafile {{.homeFolder}}/certs/caCert.pem
-keyfile {{.homeFolder}}/certs/hubKey.pem
-certfile {{.homeFolder}}/certs/hubCert.pem
+cafile /home/henk/projects/wost/hub/test/certs/caCert.pem
+keyfile /home/henk/projects/wost/hub/test/certs/hubKey.pem
+certfile /home/henk/projects/wost/hub/test/certs/hubCert.pem
 require_certificate false
 tls_version tlsv1.2
 # mosqauth plugin handles authorization
-auth_plugin {{.homeFolder}}/../dist/bin/mosqauth.so
+auth_plugin /home/henk/projects/wost/hub/test/../dist/bin/mosqauth.so
 allow_anonymous false
-password_file {{.homeFolder}}/config/mosquitto-passwd
+password_file /home/henk/projects/wost/hub/test/config/mosquitto-passwd
 
