Add ACL and password stores

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ dist/logs/*
 *.crt
 *.key
 test/config/mosquitto.conf
+test/config/pw-test.conf
+test/config/acl-test.yaml
+test/config/unpw-test.conf
