--- a/test/config/mosquitto.conf.template
+++ b/test/config/mosquitto.conf.template
@@ -17,6 +17,9 @@ persistence false
 #max_queued_bytes 100000000  
 #max_queued_messages 1000
 
+log_dest file {{.homeFolder}}/logs/mosquitto.log
+log_dest stdout
+
 log_timestamp_format [%Y-%m-%dT%H:%M:%S] Mosquitto
 log_type error
 log_type warning
@@ -25,42 +28,47 @@ log_type information
 
 #--- Default listener for MQTT over TLS with certificate
 # This is the preferred connection method and used by devices, plugins, administrator and consumers with a certificate.
+#listener {{.mqttCertPort}}
 port {{.mqttCertPort}}
-#max_connections 30
+max_connections 100
 cafile {{.homeFolder}}/certs/caCert.pem
 keyfile {{.homeFolder}}/certs/hubKey.pem
 certfile {{.homeFolder}}/certs/hubCert.pem
 
 # Certificate CN field is used as the username
 require_certificate true
-use_identity_as_username true   # CN 
+use_identity_as_username true     # CN 
 #use_subject_as_username true     # Subject
 tls_version tlsv1.2
 # mosqauth plugin handles authorization
 auth_plugin {{.homeFolder}}/../dist/bin/mosqauth.so
 auth_opt_logFile {{.homeFolder}}/logs/mosqauth.log
 auth_opt_logLevel info
-auth_opt_aclFile {{.homeFolder}}/config/acl-test.yaml
+auth_opt_aclFile {{.homeFolder}}/config/test.acl
+auth_opt_unpwFile {{.homeFolder}}/config/test.passwd
 
-#--- WebSockets over TLS/SSL for use with login/password
+
+#--- WebSockets over TLS/SSL for use with username/password login
 # Intended for web browser and client applications that are consumers without certificate
 # Client certificates are not used but a server CA is needed on the client or the 
 #  client must ignore certificate verification.
 # Use a password file for user names
 listener {{.mqttUnpwPortWS}}
-#max_connections 100
+#port {{.mqttUnpwPortWS}}
+
+max_connections 100
 protocol websockets
 cafile {{.homeFolder}}/certs/caCert.pem
 keyfile {{.homeFolder}}/certs/hubKey.pem
 certfile {{.homeFolder}}/certs/hubCert.pem
 require_certificate false
 tls_version tlsv1.2
+
 # mosqauth plugin handles authorization
 auth_plugin {{.homeFolder}}/../dist/bin/mosqauth.so
 auth_opt_logFile {{.homeFolder}}/logs/mosqauth.log
 auth_opt_logLevel info
-auth_opt_aclFile {{.homeFolder}}/config/acl-test.yaml
+auth_opt_aclFile {{.homeFolder}}/config/test.acl
+auth_opt_unpwFile {{.homeFolder}}/config/test.passwd
 
-allow_anonymous false
-password_file {{.homeFolder}}/config/mosquitto-passwd
 
