--- a/test/config/hub.yaml
+++ b/test/config/hub.yaml
@@ -2,8 +2,9 @@
 
 # Message bus server
 mqttAddress: "localhost" # LAN address to connect to the message bus
-mqttCertPort: 33100 # certificate based auth over MQTT/TLS
-mqttUnpwPortWS: 33101 # username password auth over WebSocket/TLS
+mqttPortCert: 33100 # certificate based auth over MQTT/TLS
+mqttPortUnpw: 33101 # certificate based auth over MQTT/TLS
+mqttPortWS: 33102 # username password auth over WebSocket/TLS
 mqttTimeout: 3
 
 # Logging
