--- a/thingview/tsconfig.json
+++ b/thingview/tsconfig.json
@@ -1,4 +1,5 @@
 {
+//  "extends": "@quasar/app/tsconfig-preset",
   "compilerOptions": {
     "baseUrl": ".",
     "target": "esnext",
@@ -12,9 +13,11 @@
     "esModuleInterop": true,
     "paths": {
       "@/*": [
-        "./src/*"
+        "src/*"
       ],
+      "src/*": ["src/*"],
     },
+    "skipLibCheck": false,
     "lib": [
       "esnext",
       "dom",
@@ -29,6 +32,9 @@
     "./src/**/*.vue"
   ],
   "exclude": [
-    "node_modules"
+    "/dist/",
+    "/node_modules",
+    "/stories",
+    ".quasar"
   ],
 }
