--- a/thingview/package.json
+++ b/thingview/package.json
@@ -9,19 +9,21 @@
     "clean": "rm node_modules/.cache/vite/*"
   },
   "dependencies": {
-    "@quasar/extras": "^1.12.0",
-    "quasar": "^2.3.2",
-    "vue": "^3.2.13",
+    "primevue": "^3.8.2",
+    "vue": "^3.2.22",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@quasar/vite-plugin": "^1.0.2",
-    "@types/node": "^16.10.2",
-    "@vitejs/plugin-vue": "^1.9.0",
+    "@iconify-json/mdi": "^1.0.10",
+    "@types/node": "^16.11.7",
+    "@vitejs/plugin-vue": "^1.9.4",
+    "@vue/compiler-sfc": "^3.2.22",
     "sass": "1.32.0",
     "typescript": "^4.4.3",
-    "vite": "^2.6.3",
-    "vue-tsc": "^0.3.0"
+    "unplugin-icons": "^0.12.18",
+    "unplugin-vue-components": "^0.17.2",
+    "vite": "^2.6.14",
+    "vue-tsc": "^0.29.5"
   },
   "readme": "ERROR: No README data found!",
   "_id": "thingview@0.1-alpha"
