--- a/thingview/package.json
+++ b/thingview/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thingview",
-  "version": "0.1-alpha",
+  "version": "0.3-alpha",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -9,16 +9,17 @@
     "clean": "rm node_modules/.cache/vite/*"
   },
   "dependencies": {
-    "primevue": "^3.8.2",
+    "@quasar/extras": "^1.12.1",
+    "quasar": "^2.3.2",
     "vue": "^3.2.22",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@iconify-json/mdi": "^1.0.10",
+    "@quasar/vite-plugin": "^1.0.2",
     "@types/node": "^16.11.7",
     "@vitejs/plugin-vue": "^1.9.4",
     "@vue/compiler-sfc": "^3.2.22",
-    "sass": "1.32.0",
+    "rollup-plugin-visualizer": "^5.5.2",
     "typescript": "^4.4.3",
     "unplugin-icons": "^0.12.18",
     "unplugin-vue-components": "^0.17.2",
