dev iteration - add CORS support to TLS server - rename mqttAddress in hub.yaml to simply 'address' as it is used as a default for all services. - moved idprov client from lib/client back into the idprov package - fix bugs - iteration of thingview . Add rudementary login to the auth service

--- a/idprov/test/config/hub.yaml
+++ b/idprov/test/config/hub.yaml
@@ -1,7 +1,7 @@
 # Example hub configuration
 
 # Message bus server
-mqttAddress: "127.0.0.1" # LAN address to connect to the message bus
+address: "127.0.0.1" # LAN address to connect to the message bus
 mqttPortCert: 9884 # certificate based auth over MQTT/TLS
 mqttPortUnpw: 9883 # password based auth over MQTT/TLS
 mqttPortWS: 9885 # username password auth over WebSocket/TLS
