--- a/logger/test/config/hub.yaml
+++ b/logger/test/config/hub.yaml
@@ -1,7 +1,7 @@
 # Example hub configuration
 
 # Message bus server
-mqttAddress: "127.0.0.1" # hostname:port or ip:port to listen on of message bus
+address: "127.0.0.1"
 mqttPortUnpw: 9883 # username/pw based auth over MQTT/TLS
 mqttPortCert: 9884 # certificate based auth over MQTT/TLS
 mqttPortWS: 9995 # username password auth over WebSocket/TLS
