--- a/lib/client/test/config/hub-invalid.yaml
+++ b/lib/client/test/config/hub-invalid.yaml
@@ -1,7 +1,7 @@
 # Example hub configuration
 
 # Message bus server
-mqttAddress: "localhost"
+address: "127.0.0.1"
 mqttPortUnpw: 9883 # username password auth over MQTT/TLS
 mqttPortCert: 9884 # certificate based auth over MQTT/TLS
 mqttPortWS: 9885 # username password auth over WebSocket/TLS
