--- a/lib/client/test/config/hub.yaml
+++ b/lib/client/test/config/hub.yaml
@@ -1,7 +1,7 @@
 # Example hub configuration
 
 # Message bus server
-#mqttAddress: "localhost" // default is outbound ip
+#address: "127.0.0.1" // default is outbound ip
 mqttPortUnpw: 9883 # certificate based auth over MQTT/TLS
 mqttPortCert: 9884 # certificate based auth over MQTT/TLS
 mqttPortWS: 9885 # username password auth over WebSocket/TLS
