--- a/thingdir/test/config/hub.yaml
+++ b/thingdir/test/config/hub.yaml
@@ -1,7 +1,9 @@
 # Example hub configuration
 
-# Message bus server
-mqttAddress: "127.0.0.1" # LAN address to connect to the message bus
+# hub services address
+address: "127.0.0.1"
+
+# mqtt ports
 mqttPortCert: 9884 # certificate based auth over MQTT/TLS
 mqttPortUnpw: 9883 # certificate based auth over MQTT/TLS
 mqttPortWS: 9885 # username password auth over WebSocket/TLS
