--- a/thingview/package.json
+++ b/thingview/package.json
@@ -10,23 +10,24 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.12.1",
+    "axios": "^0.24.0",
     "mqtt": "^4.2.8",
     "nanoid": "^3.1.30",
-    "quasar": "^2.3.2",
-    "vue": "^3.2.22",
+    "quasar": "^2.3.3",
+    "vue": "^3.2.23",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.0.2",
+    "@rollup/plugin-node-resolve": "^13.0.6",
     "@types/mqtt": "^2.5.0",
     "@types/node": "^16.11.10",
-    "@vitejs/plugin-vue": "^1.9.4",
+    "@vitejs/plugin-vue": "^1.10.1",
     "@vue/compiler-sfc": "^3.2.22",
-    "rollup-plugin-visualizer": "^5.5.2",
     "typescript": "^4.4.3",
     "unplugin-vue-components": "^0.17.2",
     "vite": "^2.6.14",
-    "vue-tsc": "^0.29.5"
+    "vue-tsc": "^0.29.6"
   },
   "readme": "ERROR: No README data found!",
   "_id": "thingview@0.1-alpha"
