--- a/thingview/package.json
+++ b/thingview/package.json
@@ -20,15 +20,13 @@
   "devDependencies": {
     "@quasar/vite-plugin": "^1.0.2",
     "@rollup/plugin-node-resolve": "^13.0.6",
-    "@types/mqtt": "^2.5.0",
     "@types/node": "^16.11.10",
     "@vitejs/plugin-vue": "^1.10.1",
-    "@vue/compiler-sfc": "^3.2.22",
     "typescript": "^4.4.3",
     "unplugin-vue-components": "^0.17.2",
     "vite": "^2.6.14",
     "vue-tsc": "^0.29.6"
   },
   "readme": "ERROR: No README data found!",
-  "_id": "thingview@0.1-alpha"
+  "_id": "thingview"
 }
