--- a/thingview/package.json
+++ b/thingview/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.12.1",
-    "axios": "^0.24.0",
     "mqtt": "^4.2.8",
     "nanoid": "^3.1.30",
     "quasar": "^2.3.3",
@@ -22,6 +21,7 @@
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@types/node": "^16.11.10",
     "@vitejs/plugin-vue": "^1.10.1",
+    "rollup-plugin-visualizer": "^5.5.2",
     "typescript": "^4.4.3",
     "unplugin-vue-components": "^0.17.2",
     "vite": "^2.6.14",
