Bug fixes; Start on view of things

--- a/thingview/tsconfig.json
+++ b/thingview/tsconfig.json
@@ -30,10 +30,10 @@
   },
   "include": [
     "decs.d.ts",
-    "./src/**/*.ts",
-    "./src/**/*.d.ts",
-    "./src/**/*.tsx",
-    "./src/**/*.vue"
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue"
   ],
   "exclude": [
     "dist",
