dev iteration on Things view; show details

--- a/thingview/tsconfig.json
+++ b/thingview/tsconfig.json
@@ -17,7 +17,7 @@
       "src/*": ["src/*"]
     },
     "strict": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "target": "esnext",
     "types": [
       "vite/client"
