--- a/thingview/package.json
+++ b/thingview/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.12.1",
+    "@vueuse/core": "^7.4.0",
     "mqtt": "^4.2.8",
     "nanoid": "^3.1.30",
     "quasar": "^2.3.3",
