dev iteration -  improved routing of add/edit/remove dashboards - added standandalone dashboard store - added add/edit dashboard tiles - cleanup

--- a/thingview/tsconfig.json
+++ b/thingview/tsconfig.json
@@ -20,7 +20,8 @@
     },
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "sourceMap": true,
+//    "sourceMap": true,
+    "outDir": "dist/tmp",
     "strict": true,
     "target": "esnext",
     "types": [
