--- a/thingview/package.json
+++ b/thingview/package.json
@@ -15,6 +15,7 @@
     "nanoid": "^3.1.30",
     "quasar": "^2.3.3",
     "vue": "^3.2.23",
+    "vue-grid-layout": "^2.3.12",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
