dev iteration on Things view; - use vue3-grid-layout for dashboard - fix for switching layouts between breakpoints - TODO: saving and restoring layout when switching dashboards. - TODO: find alternative that isn't so big

--- a/thingview/package.json
+++ b/thingview/package.json
@@ -15,8 +15,8 @@
     "nanoid": "^3.1.30",
     "quasar": "^2.3.3",
     "vue": "^3.2.23",
-    "vue-grid-layout": "^2.3.12",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vue3-grid-layout": "^1.0.0"
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.0.3",
