dev iteration for edit dashboard tiles

--- a/thingview/package.json
+++ b/thingview/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.12.1",
+    "@types/lodash-es": "^4.17.5",
     "@vueuse/core": "^7.4.0",
+    "lodash-es": "^4.17.21",
     "mqtt": "^4.2.8",
     "nanoid": "^3.1.30",
     "quasar": "^2.3.3",
