--- a/launcher/test/config/hub.yaml
+++ b/launcher/test/config/hub.yaml
@@ -12,3 +12,10 @@ logLevel: "info" # debug, info, warning, error. Default is warning
 
 #configFolder: "./config" # plugin config, relative to the working directory
 #certsFolder: "./certsclient" # set to activate TLS. Relative to app home folder
+
+
+# keep the existing server and hub client certificates and keys (signed by CA) on startup
+# instead of generating a new certificate. Default is false
+# The server certificate is used to validate access tokens so generating a new certificate invalidates
+# existing access tokens.
+#keepServerCertOnStartup: false
